sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: Unmatched closing brace '}' ignored here
	}
        ^