sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var lgr=getNombreValeurs();
var j=0;
for(i<-1 to lgr-1){
	var v=getValeur(i);
	j=i;
	while(plusPetitQue(j,v)==false){
			copie(j,j+1);
			j -=1;
	}
			copie(v,j);
	}
	}
	}

